going through jekyll tutorial and making basic changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
-layout: blog
-title: Blog
-cover: true
-image: /assets/img/header-background.jpg
+layout: default
+title: Home
 ---
+<h1>{{ "Hello World!" | downcase }}</h1>
