index page with social icons and description and horizontal menu

--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<div style="margin: auto;width:60%;">
+<h1 class="index-header">{{ "A new era of accounting!" | downcase }}</h1>
+<p class="index-p">Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence one of the world's most repetitive professions.</p>
+</div>
