--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 title: Home
 ---
-<div style="margin: auto;width:60%;">
-<h1 class="index-header">{{ "A new era of accounting!" | downcase }}</h1>
-<p class="index-p">Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence one of the world's most repetitive professions.</p>
+<div class="index-wrapper">
+<h1 class="index-header">changing nature of accounting</h1>
+<section class="index-p">
+    <p>Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence one of the world's most repetitive professions.</p>
+
+</section>
+
 </div>
