--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <div class="index-wrapper">
 <h1 class="index-header">changing nature of accounting</h1>
 <section class="index-p">
-    <p>Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence one of the world's most repetitive professions.</p>
+    <p>Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence accounting.</p>
 
 </section>
 </div>
