added twitter feed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ title: Home
 <h1 class="index-header">changing nature of accounting</h1>
 <section class="index-p">
     <p>Accounting is changing rapidly with the new developments in technology, automation, data analytics, machine learning, natural language processing, even OCR/optical character recognition - all of it under one very powerful umbrella of digital innovation. A lot of the changes are still widely misunderstood and cautiously pursued. I would like to use this blog as a means of allowing a small glimpse into what's possible, the challenges behind it and how programming can influence accounting.</p>
-
 </section>
+<div class='jekyll-twitter-plugin' align="center">
+    <div class='jekyll-twitter-plugin'><a class="twitter-timeline" data-width="500" data-dnt="true" data-tweet-limit="3" data-theme="dark" href="https://twitter.com/Tech_Accountant?ref_src=twsrc%5Etfw">Tweets by Tech_Accountant</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+</div>
 </div>
